--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,14 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
+
+
+#multipart configurtion
+
+#enabling multipart uploads
+spring.servlet.multipart.enabled=true
+#max file size
+spring.servlet.multipart.max-file-size=300MB
+#threshold afer whic files are written to disk
+spring.servlet.multipart.file-size-threshold=1KB
+
